Week 14 first commit

--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,31 @@
       <optional>true</optional>
     </dependency>
     
-    <!-- OpenAPI dependency ============================== -->
+    <!-- OpenAPI dependency -->
     <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-ui</artifactId>
       <version>1.6.14</version>
+    </dependency>
+    
+    <!-- Database Dependencies -->
+    
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jdbc</artifactId>
+      </dependency>
+    
+    <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      </dependency>
+      
+    <!-- Test Dependencies -->
+    
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>test</scope>
     </dependency>
     
     <dependency>
